# ot-harjoitustyo

./: .coverage  .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: .coverage  .coveragerc  pyproject.toml  tasks.py
laskarit/viikko2/maksukortti/htmlcov/: index.html  src_maksukortti_py.html  status.json
laskarit/viikko2/maksukortti/src/tests/: .coverage  maksukortti_test.py
laskarit/viikko2/maksukortti/src/tests/htmlcov/: __init___py.html  _home_tomi__cache_pypoetry_virtualenvs_maksukortti-1W9wsl_q-py3_8_lib_python3_8_site-packages__pytest___init___py.html  _home_tomi__cache_pypoetry_virtualenvs_maksukortti-1W9wsl_q-py3_8_lib_python3_8_site-packages__pytest__argcomplete_py.html  _home_tomi__cache_pypoetry_virtualenvs_maksukortti-1W9wsl_q-py3_8_lib_python3_8_site-packages__pytest__code___init___py.html  _home_tomi__cache_pypoetry_virtualenvs_maksukortti-1W9wsl_q-py3_8_lib_python3_8_site-packages__pytest__code_code_py.html  _home_tomi__cache_pypoetry_virtualenvs_maksukortti-1W9wsl_q-py3_8_lib_python3_8_site-packages__pytest__code_source_py.html  (+95 more)
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: build.py  home_menu.py  index.py  initialize_database.py  login.py
src/entities/: courses.py
src/repositories/: course_repository.py
src/tests/: conftest.py  course_test.py  login_test.py
src/ui/: ui.py
