[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Tomi Kaleva <tomi.kaleva@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.5.0"
python-dotenv = "^0.16.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
coverage = "^5.5"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
